riskcast-v16-main/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: riskcast
  labels:
    name: riskcast
    environment: production
